[package]
name = "cc-balance-overlay"
version = "1.0.1"
edition = "2021"
description = "Windows overlay that shows current CC Switch Claude and Codex balances near the taskbar tray."
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
notify = "8"
reqwest = { version = "0.12", default-features = true, features = ["blocking", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tray-icon = "0.19"
url = "2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
] }

[dev-dependencies]
tempfile = "3"
